# blue-green-pink-shop

./: Cargo.toml  README.md  index.html
src/: pages.rs
src/app_leptos/: router.rs
src/assets/shop_items/: shop_items.toml
src/pages/: components.rs  home.rs  shop.rs
src/styles/: index.scss
