[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.leptos]
lib-profile-release = "wasm-release"

[package]
name = "blue-green-pink-shop"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.5.2", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.2", features = ["csr", "nightly"] }
serde = "1.0.190"
toml = "0.8.8"
